# OpenWhisperer

./: .env.development.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: package-lock.json  package.json
src-tauri/sidecar/scripts/: patch-sdk.mjs
src-tauri/sidecar/src/: index.ts
src-tauri/src/: archive.rs  config.rs  docker.rs  git.rs  launch.rs  lib.rs  main.rs  no_mistakes.rs  notion.rs  persist.rs  proc.rs  realtime.rs  session_persistence.rs  sidecar.rs  terminal.rs  usage_stats.rs  util.rs  whisper.rs
src-tauri/src/commands/: account_cmds.rs  archive_cmds.rs  audio_cmds.rs  debug_recordings_cmds.rs  docker_cmds.rs  git_cmds.rs  github_cmds.rs  image_cmds.rs  input_cmds.rs  launch_cmds.rs  llm_cmds.rs  log_cmds.rs  mcp_cmds.rs  mod.rs  no_mistakes_cmds.rs  notion_cmds.rs  pile_cmds.rs  realtime_cmds.rs  screenshot_cmds.rs  sdk_cmds.rs  sequence_cmds.rs  session_cmds.rs  settings_cmds.rs  spare_tokens_cmds.rs  terminal_cmds.rs  usage_cmds.rs  validation_cmds.rs
src-tauri/src/config/: accounts.rs  audio.rs  hotkeys.rs  llm.rs  mcp.rs  migration.rs  mod.rs  provider.rs  realtime.rs  repo.rs  sequences.rs  ui.rs  validation.rs  whisper.rs
src-tauri/src/llm/: features.rs  mod.rs  prompt_tests.rs  providers.rs  types.rs  utils.rs
src-tauri/src/sequences/: ai_generation.rs  mod.rs  (+11 more)
src-tauri/wix/: main.wxs
(+266 files in other folders)
