[package]
name = "open-whisperer"
version = "0.14.0"
description = "Voice-controlled interface for Claude Code"
authors = ["iSirux"]
edition = "2021"

[lib]
name = "open_whisperer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
thiserror = "2"
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-keyring = "0.1"
tauri-plugin-window-state = "2"
enigo = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
sha2 = "0.10"
url = "2"
base64 = "0.22"
rand = "0.9"
serde_yaml = "0.9"
minijinja = { version = "2", features = ["builtins"] }
cron = "0.12"
regex = "1"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
log = "0.4"
windows-sys = { version = "0.59", features = ["Win32_UI_Shell"] }
xcap = "0.9.6"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
